generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        Int       @id @default(autoincrement())
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  email     String    @unique
  password  String
  name      String
  avatar    Int?
  bio       String?
  role      Role      @default(USER)
  Product   Product[] @relation("ProductToUser")
  Review    Review[]  @relation("ReviewToUser")
}

model Product {
  id          Int        @id @default(autoincrement())
  name        String     @unique
  description String?
  price       Float?
  stock       Int?
  image       String?
  weight      Float?
  dimensions  String?
  rating      Float?
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
  categories  Category[] @relation("CategoryToProduct")
  Pharmacy    Pharmacy[] @relation("PharmacyToProduct")
  reviews     Review[]   @relation("ProductToReview")
  user        User[]     @relation("ProductToUser")
}

model Review {
  id        Int       @id @default(autoincrement())
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  title     String
  body      String
  rating    Int
  product   Product[] @relation("ProductToReview")
  user      User[]    @relation("ReviewToUser")
}

model Pharmacy {
  id          Int           @id @default(autoincrement())
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt
  name        String
  description String?
  phone       String
  email       String
  image       String
  products    Product[]     @relation("PharmacyToProduct")
  geolocation geolocation[] @relation("PharmacyTogeolocation")
}

model geolocation {
  id        Int        @id @default(autoincrement())
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  latitude  Float
  longitude Float
  address   String
  cep       String
  city      String
  state     String
  country   String
  pharmacy  Pharmacy[] @relation("PharmacyTogeolocation")
}

model Category {
  id       Int       @id @default(autoincrement())
  name     String
  products Product[] @relation("CategoryToProduct")
}

model Order {
  id        String   @id @default(uuid())
  userId    String
  productId String
  quantity  Int
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

enum Role {
  ADMIN
  USER
}
