//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  name String [not null]
  avatar Int
  bio String
  role Role [not null, default: 'USER']
  Product Product [not null]
  Review Review [not null]
}

Table Product {
  id Int [pk, increment]
  name String [unique, not null]
  description String
  price Float
  stock Int
  image String
  weight Float
  dimensions String
  rating Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  categories Category [not null]
  Pharmacy Pharmacy [not null]
  reviews Review [not null]
  user User [not null]
}

Table Review {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  body String [not null]
  rating Int [not null]
  product Product [not null]
  user User [not null]
}

Table Pharmacy {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  description String
  phone String [not null]
  email String [not null]
  image String [not null]
  products Product [not null]
  geolocation geolocation [not null]
}

Table geolocation {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  latitude Float [not null]
  longitude Float [not null]
  address String [not null]
  cep String [not null]
  city String [not null]
  state String [not null]
  country String [not null]
  pharmacy Pharmacy [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  products Product [not null]
}

Table Order {
  id String [pk]
  userId String [not null]
  productId String [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ProductToUser {
  productId Int [ref: > Product.id]
  userId Int [ref: > User.id]
}

Table ReviewToUser {
  reviewId Int [ref: > Review.id]
  userId Int [ref: > User.id]
}

Table CategoryToProduct {
  categoriesId Int [ref: > Category.id]
  productsId Int [ref: > Product.id]
}

Table PharmacyToProduct {
  pharmacyId Int [ref: > Pharmacy.id]
  productsId Int [ref: > Product.id]
}

Table ProductToReview {
  reviewsId Int [ref: > Review.id]
  productId Int [ref: > Product.id]
}

Table PharmacyTogeolocation {
  geolocationId Int [ref: > geolocation.id]
  pharmacyId Int [ref: > Pharmacy.id]
}

Enum Role {
  ADMIN
  USER
}